# bossy_radar

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.template  CLAUDE.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: aggregation.py  companies.py  environmental_violations.py  leaderboard.py  mops.py  system.py  violations.py
backend/app/cli/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  company.py  employee_benefit.py  environmental_violation.py  non_manager_salary.py  salary_adjustment.py  violation.py  welfare_policy.py
backend/app/schemas/: aggregation.py  company.py  environmental_violation.py  leaderboard.py  mops.py  system.py  violation.py
backend/app/services/: company_detail_scraper.py  company_matcher.py  company_service.py  crawler_service.py  environmental_service.py  export_service.py  mops_scraper.py  violation_service.py
backend/scripts/: analyze_mops_columns.py  analyze_mops_others.py  fetch_mops_sample.py  fix_corrupted_data.py  test_mops_final.py  test_mops_params.py
frontend/: .env.example  .gitignore  AI.md  CLAUDE.md  DATA.md  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app.vue
frontend/app/composables/: useApi.ts  useCompanyFilters.ts  (+4 more)
frontend/composables/: useApi.ts
frontend/constants/: index.ts
frontend/layouts/: default.vue
frontend/public/: robots.txt
frontend/stores/: watchlist.ts
frontend/types/: api.ts
frontend/utils/: format.ts
(+39 files in other folders)
