[project]
name = "backend"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]
